@@ -231,67 +231,6 @@ as well.
 &supported-s390.xml;
 &supported-sparc.xml;
 
-  <sect2 id="gfx" arch="not-s390"><title>Graphics Card Support</title>
-<para arch="x86">
-
-You should be using a VGA-compatible display interface for the console
-terminal. Nearly every modern display card is compatible with
-VGA. Ancient standards such CGA, MDA, or HGA should also work,
-assuming you do not require X11 support.  Note that X11 is not used
-during the installation process described in this document.
-
-</para><para>
-
-Debian's support for graphical interfaces is determined by the
-underlying support found in X.Org's X11 system.  Most AGP, PCI and
-PCIe video cards work under X.Org.  Details on supported graphics
-buses, cards, monitors, and pointing devices can be found at
-<ulink url="&url-xorg;"></ulink>.  Debian &release; ships
-with X.Org version &x11ver;.
-
-</para><para arch="mips">
-
-<!-- FIXME: mention explicit graphics chips and not system names -->
-The X.Org X Window System is only supported on the SGI Indy and the O2.  The
-Broadcom BCM91250A and BCM91480B evaluation boards have standard 3.3v PCI
-slots and support VGA emulation or Linux framebuffer on a selected range
-of graphics cards.  A <ulink url="&url-bcm91250a-hardware;">compatibility
-listing</ulink> for Broadcom evaluation boards is available.
-
-</para><para arch="mipsel">
-
-The Broadcom BCM91250A and BCM91480B evaluation boards have standard 3.3v PCI
-slots and support VGA emulation or Linux framebuffer on a selected range
-of graphics cards.  A <ulink url="&url-bcm91250a-hardware;">compatibility
-listing</ulink> for Broadcom evaluation boards is available.
-
-</para><para arch="sparc">
-
-Most graphics options commonly found on Sparc-based machines are supported.
-X.org graphics drivers are available for sunbw2, suncg14, suncg3, suncg6,
-sunleo and suntcx framebuffers, Creator3D and Elite3D cards (sunffb driver),
-PGX24/PGX64 ATI-based video cards (ati driver), and PermediaII-based cards
-(glint driver). To use an Elite3D card with X.org you additionally need to
-install the <classname>afbinit</classname> package, and read the documentation
-included with it on how to activate the card.
-
-</para><para arch="sparc">
-
-It is not uncommon for a Sparc machine to have two graphics cards in a
-default configuration. In such a case there is a possibility that the
-Linux kernel will not direct its output to the card initially used by the
-firmware. The lack of output on the graphical console may then be mistaken
-for a hang (usually the last message seen on console is 'Booting Linux...').
-One possible solution is to physically remove one of the video cards;
-another option is to disable one of the cards using a kernel boot parameter.
-Also, if graphical output is not required or desired, serial console may be
-used as an alternative. On some systems use of serial console can be
-activated automatically by disconnecting the keyboard before booting the
-system.
-
-</para>
-  </sect2>
-
   <sect2 arch="x86" id="laptops"><title>Laptops</title>
 <para>
 
@@ -396,4 +335,69 @@ section of the kernel config.
 
 </para>
   </sect2>
+
+  <sect2 id="gfx" arch="not-s390"><title>Graphics Card Support</title>
+<para arch="x86">
+
+You should be using a VGA-compatible display interface for the console
+terminal. Nearly every modern display card is compatible with
+VGA. Ancient standards such CGA, MDA, or HGA should also work,
+assuming you do not require X11 support.  Note that X11 is not used
+during the installation process described in this document.
+
+</para><para>
+
+Debian's support for graphical interfaces is determined by the
+underlying support found in X.Org's X11 system.  Most AGP, PCI and
+PCIe video cards work under X.Org.  Details on supported graphics
+buses, cards, monitors, and pointing devices can be found at
+<ulink url="&url-xorg;"></ulink>.  Debian &release; ships
+with X.Org version &x11ver;.
+
+</para><para arch="mips">
+
+<!-- FIXME: mention explicit graphics chips and not system names -->
+The X.Org X Window System is only supported on the SGI Indy and the O2.  The
+Broadcom BCM91250A and BCM91480B evaluation boards have standard 3.3v PCI
+slots and support VGA emulation or Linux framebuffer on a selected range
+of graphics cards.  A <ulink url="&url-bcm91250a-hardware;">compatibility
+listing</ulink> for Broadcom evaluation boards is available.
+
+</para><para arch="mipsel">
+
+The Broadcom BCM91250A and BCM91480B evaluation boards have standard 3.3v PCI
+slots and support VGA emulation or Linux framebuffer on a selected range
+of graphics cards.  A <ulink url="&url-bcm91250a-hardware;">compatibility
+listing</ulink> for Broadcom evaluation boards is available.
+
+</para><para arch="sparc">
+
+Most graphics options commonly found on Sparc-based machines are supported.
+X.org graphics drivers are available for sunbw2, suncg14, suncg3, suncg6,
+sunleo and suntcx framebuffers, Creator3D and Elite3D cards (sunffb driver),
+PGX24/PGX64 ATI-based video cards (ati driver), and PermediaII-based cards
+(glint driver). To use an Elite3D card with X.org you additionally need to
+install the <classname>afbinit</classname> package, and read the documentation
+included with it on how to activate the card.
+
+</para><para arch="sparc">
+
+It is not uncommon for a Sparc machine to have two graphics cards in a
+default configuration. In such a case there is a possibility that the
+Linux kernel will not direct its output to the card initially used by the
+firmware. The lack of output on the graphical console may then be mistaken
+for a hang (usually the last message seen on console is 'Booting Linux...').
+One possible solution is to physically remove one of the video cards;
+another option is to disable one of the cards using a kernel boot parameter.
+Also, if graphical output is not required or desired, serial console may be
+used as an alternative. On some systems use of serial console can be
+activated automatically by disconnecting the keyboard before booting the
+system.
+
+</para>
+  </sect2>
+
+&network-cards.xml;
+&supported-peripherals.xml;
+
  </sect1>
