@@ -1,7 +1,7 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- $Id$ -->
 
- <sect1 id="network-cards">
+ <sect2 id="network-cards">
  <title>Network Connectivity Hardware</title>
 <para>
 
@@ -90,7 +90,7 @@ supported; Spellcaster BRI ISDN boards are also not supported by the
 
 </para>
 
-  <sect2 arch="not-s390" id="nics-firmware">
+  <sect3 arch="not-s390" id="nics-firmware">
   <title>Drivers Requiring Firmware</title>
 <para>
 
@@ -118,9 +118,9 @@ also copy the firmware to that location for the installed system before
 the reboot at the end of the installation.
 
 </para>
-  </sect2>
+  </sect3>
 
-  <sect2 condition="supports-wireless" id="nics-wireless">
+  <sect3 condition="supports-wireless" id="nics-wireless">
   <title>Wireless Network Cards</title>
 <para>
 
@@ -146,9 +146,9 @@ use the <classname>ndiswrapper</classname> package, which allows you to use
 a Windows driver.</phrase>
 
 </para>
-  </sect2>
+  </sect3>
 
-  <sect2 arch="sparc" id="nics-sparc-trouble">
+  <sect3 arch="sparc" id="nics-sparc-trouble">
   <title>Known Issues for &arch-title;</title>
 <para>
 
@@ -157,7 +157,7 @@ mentioning here.
 
 </para>
 
-   <sect3><title>Conflict between tulip and dfme drivers</title>
+   <sect4><title>Conflict between tulip and dfme drivers</title>
 <!-- BTS: #334104; may also affect other arches, but most common on sparc -->
 <para>
 
@@ -188,9 +188,9 @@ Note that the wrong module may then still be loaded when the system is
 rebooted.
 
 </para>
-   </sect3>
+   </sect4>
 
-   <sect3><title>Sun B100 blade</title>
+   <sect4><title>Sun B100 blade</title>
 <!-- BTS: #384549; should be checked for kernels >2.6.18 -->
 <para>
 
@@ -198,6 +198,6 @@ The <literal>cassini</literal> network driver does not work with Sun B100
 blade systems.
 
 </para>
-   </sect3>
-  </sect2>
- </sect1>
+   </sect4>
+  </sect3>
+ </sect2>
