@@ -30,7 +30,10 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
     Closes: #493720
   * Mention parman-md/device_remove_md in preseeding appendix.
 
- -- Frans Pop <fjp@debian.org>  Wed, 02 Jul 2008 17:06:28 +0200
+  [ Frans Pop ]
+  * Restructure supported hardware section.
+
+ -- Frans Pop <fjp@debian.org>  Fri, 03 Oct 2008 18:04:50 +0200
 
 installation-guide (20080520) unstable; urgency=medium
 
